--- a/src/components/LoginForm/Loginform.css
+++ b/src/components/LoginForm/Loginform.css
@@ -51,6 +51,9 @@
 }
 
 .button {
+    border-radius: 8px !important;
+    font-size: 20px;
+    font-weight: bold;
     background-color: rgb(46, 9, 69) !important;
 }
 
