--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 
 .App-header {
-  background-color: #282c34;
+  background-color: #dbdbdb;
   flex-direction: column;
   align-items: center;
   justify-content: center;
