--- a/src/components/SignupForm/Signup.css
+++ b/src/components/SignupForm/Signup.css
@@ -1,24 +1,43 @@
-.prev {
-    background-color: #8761ac;
-    border: 1px solid lavender;
-    color: white;
-    padding: 8px 16px;
-    margin-right: 8px;
-    cursor: pointer;
+body {
+  background: rgb(2, 0, 36);
+  background: radial-gradient(
+    circle,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(30, 54, 59, 1) 0%,
+    rgba(93, 93, 116, 1) 100%
+  );
 }
 
-.next {
-    background-color: #8761ac;
-    border: 1px solid lavender;
-    color: white;
-    padding: 8px 16px;
-    cursor: pointer;
+.container {
+  display: flex !important;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  max-width: 500px;
+  width: 100%;
+  margin: auto;
+}
+.container > form {
+  width: 70%;
+  border: 1px solid #dfdfdf;
+  padding: 20px;
+  border-radius: 5px;
+  background: #fff;
+}
+pre {
+  width: 70%;
+  color: #fff;
+  font-size: larger;
 }
 
-.prev:hover {
-    background-color: #583e70;
+button {
+  background: #d4a3ff !important;
+}
+p {
+  color: red;
 }
 
-.next:hover {
-    background-color: #583e70;
+.error-span {
+  color: crimson;
 }
