--- a/src/components/Dashboard/FacultyPannel.css
+++ b/src/components/Dashboard/FacultyPannel.css
@@ -1,29 +1,29 @@
+.side-content {
+  display: flex;
+}
+
 .main-content {
-    color: black;
-    background-color: brown;
-    height: 100vh;
-    margin: 0;
-    padding: 2px;
-    top: 0;
-    left: 0;
-  }
-  
+  flex: 1;
+  color: black;
+  background-color: brown;
+  height: auto;
+  margin: 0;
+  padding: 2px;
+}
+
+
+.main-content {
+  flex: 1;
+  padding: 20px;
+}
+
+
+@media (max-width: 768px) {
   .side-content {
-    display: flex;
+    flex-direction: column;
   }
-  
+
   .main-content {
-    flex: 1;
-    padding: 20px;
+    padding-top: 40px;
   }
-  
-  
-  @media (max-width: 768px) {
-    .side-content {
-      flex-direction: column;
-    }
-  
-    .main-content {
-      padding-top: 40px;
-    }
-  }
+}
