--- a/src/components/LoginForm/Loginform.css
+++ b/src/components/LoginForm/Loginform.css
@@ -1,9 +1,9 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* background-color: #E6E6FA; */
-}
+    /* background-color: #E6E6FA; 
+} */
 
 .login-container {
     position: absolute;
