--- a/src/components/SignupForm/Signup.css
+++ b/src/components/SignupForm/Signup.css
@@ -1,14 +1,6 @@
-body {
-  background: rgb(2, 0, 36);
-  background: radial-gradient(
-    circle,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(30, 54, 59, 1) 0%,
-    rgba(93, 93, 116, 1) 100%
-  );
-}
 
-.container {
+
+.signup-container {
   display: flex !important;
   flex-direction: column;
   justify-content: center;
@@ -18,25 +10,14 @@ body {
   width: 100%;
   margin: auto;
 }
-.container > form {
+.signup-container > form {
   width: 70%;
   border: 1px solid #dfdfdf;
   padding: 20px;
   border-radius: 5px;
   background: #fff;
 }
-pre {
-  width: 70%;
-  color: #fff;
-  font-size: larger;
-}
 
-button {
-  background: #d4a3ff !important;
-}
-p {
-  color: red;
-}
 
 .error-span {
   color: crimson;
