--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,36 @@
 .navbar-dark-lavender {
-    /* background-color: #cbbbdb ;  */
-    background-color: #8761ac ;
+    background-color: #8761ac;
 }
 
+
+.hheader {
+    background-color: #6b5b95;
+    padding: 1rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
 .custom-title {
-    font-family: 'Arial', sans-serif; 
-    font-size: 24px; 
-    color: #4a148c; 
-  }
+    font-size: 1.5rem;
+    color: #fff;
+    margin: 0;
+}
+
+
+.nav-link {
+    color: #fff;
+    margin: 0 1rem;
+    text-decoration: none;
+}
+
+@media (max-width: 768px) {
+    .custom-title {
+        font-size: 1.2rem;
+    }
+
+    .hheader {
+        padding: 1rem;
+    }
+}
