--- a/src/components/HomePage/Home.css
+++ b/src/components/HomePage/Home.css
@@ -3,10 +3,20 @@
     background: linear-gradient(-45deg, #8761ac, #4c3463);
     min-height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: center; 
     align-items: center;
     background: linear-gradient(-45deg, #8761ac 0%, #8761ac 27%, transparent 27%), linear-gradient(45deg, #8761ac 0%, #8761ac 26%, #4c3463 26%);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.main-header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 2rem;
+    text-align: center !important; 
+    color: #fff;
 }
 
 .title {
@@ -52,7 +62,7 @@
     align-items: center;
 }
 
-.about-title{
+.about-title {
     font-size: 2.5rem;
     font-weight: 600;
     margin-bottom: 1rem;
@@ -63,11 +73,12 @@
     content: "";
     display: block;
     position: absolute;
-    bottom: -5px; 
+    bottom: -5px;
     left: 0;
-    width: 40%; 
+    width: 40%;
     border-bottom: 4px solid #2e1645;
-  }
+}
+
 .about-image {
     flex: 1;
     padding: 20px;
@@ -85,11 +96,10 @@
     padding: 8vh;
 }
 
-
 @media (max-width: 768px) {
     .diagonal-bg {
-      min-height: 90vh; 
-      justify-content: flex-start;
+        min-height: 100vh;
+        justify-content: flex-start;
     }
     .title {
         font-weight: 600 !important;
@@ -97,18 +107,19 @@
         font-size: 2rem !important;
     }
     .main-header {
-        position: absolute;
-        top: 30% !important;
+        position: relative;
+        margin-bottom: 30% !important;
+        font-size: 2rem !important;
     }
     .about-container {
-        flex-direction: column; 
+        flex-direction: column;
     }
     .about-content {
-        order: -1; 
+        order: -1;
         padding: 5vh;
     }
     .about-image {
-        order: -2; 
+        order: -2;
     }
     .lead {
         font-size: 1.5rem;
