--- a/src/components/LoginForm/Loginform.css
+++ b/src/components/LoginForm/Loginform.css
@@ -19,14 +19,13 @@
 }
 
 .login-background {
-    background-color: lavender;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.title {
+.login-title {
     font-size: 30px;
     font-weight: bold;
     color: black;
