--- a/src/components/SignupForm/Signup.css
+++ b/src/components/SignupForm/Signup.css
@@ -14,10 +14,21 @@
   width: 70%;
   border: 1px solid #dfdfdf;
   padding: 20px;
-  border-radius: 5px;
+  border-radius: 8px;
   background: #fff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
+.sign-up-header {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 0.5rem;
+}
+
+.button{
+  color: white !important;
+}
 
 .error-span {
   color: crimson;
