--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* global css should be added here */
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
