--- a/src/components/DashboardForms/Form.module.css
+++ b/src/components/DashboardForms/Form.module.css
@@ -1,7 +1,7 @@
 .modalBackground {
   position: fixed;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100vw;
@@ -9,22 +9,28 @@
   z-index: 10 !important;
   background: rgba(0, 0, 0, 0.4);
 }
+input{
+  border-radius: 15px;
+  border: 2px solid #d7d7d7;
+  padding: 2px;
 
+}
 .modalContainer {
-  width: 80vw;
-  height: 80vh;
+  width: 80vh;
+  max-height: fit-content;
   border-radius: 12px;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
   display: flex;
   flex-direction: column;
-  padding: 25px;
+  margin: 5px;
+  padding: 5px;
 }
 
 .modalContainer .title {
   display: inline-block;
   text-align: center;
-  margin-top: 10px;
+  margin-top: 3px;
 }
 
 .titleCloseBtn {
@@ -40,11 +46,11 @@
 }
 
 .modalContainer .body {
-  flex: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.7rem;
+  font-size: medium;
+  font-weight: 500;
   text-align: center;
 }
 
@@ -56,11 +62,11 @@
 }
 
 .modalContainer .footer button {
-  width: 150px;
+  width: 100px;
   height: 45px;
-  margin: 10px;
+  margin: 5px;
   border: none;
-  background-color: cornflowerblue;
+  background-color: rgb(152, 154, 253);
   color: white;
   border-radius: 8px;
   font-size: 20px;
@@ -74,13 +80,16 @@
 .invalid input {
   border: 1px solid #b40e0e;
   background-color: #fddddd;
+  font-weight: 600;
 }
 
 .invalid input:focus {
   border-color: #ff8800;
   background-color: #fbe8d2;
+  font-weight: 600;
 }
 
 .error-text {
   color: #b40e0e;
+  font-weight: 600;
 }
