--- a/src/components/HomePage/Home.module.css
+++ b/src/components/HomePage/Home.module.css
@@ -10,6 +10,7 @@
     align-items: center;
     background: linear-gradient(-45deg, #8761ac 0%, #8761ac 27%, transparent 27%), linear-gradient(45deg, #8761ac 0%, #8761ac 26%, #4c3463 26%);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    overflow: auto;
 }
 
 .main-header{
@@ -34,30 +35,34 @@
     border-radius: 5px;
 }
 
-.btn1 {
-    background-color: #8761ac;
+.btn-1 {
+    background-color: #8761ac !important;
     color: white;
     border: 1px solid #8761ac;
     border-radius: 35px !important;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
-.btn1:hover {
+.btn-1:hover {
     background-color: #583e70;
     color: white;
     border: 1px solid #4c3463;
 }
 
-.btn2 {
-    background-color: #8761ac;
-    color: white;
-    border: 1px solid #8761ac;
-    border-radius: 35px !important;
+.btn-2 {
+    background-color: #8761ac ;
+    color: white ;
+    border: 1px solid #8761ac ;
+    border-radius: 35px ;
+    padding-left: 20px ;
+    padding-right: 20px ;
 }
 
-.btn2:hover {
-    background-color: #583e70;
-    color: white;
-    border: 1px solid #4c3463;
+.btn-2:hover {
+    background-color: #583e70 ;
+    color: white ;
+    border: 1px solid #4c3463 ;
 }
 
 .about-container {
