--- a/src/components/Dashboard/AdminPanel.css
+++ b/src/components/Dashboard/AdminPanel.css
@@ -7,6 +7,14 @@
   left: 0;
 }
 
+.admin-data {
+  left:0;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
 .side-content {
   display: flex;
 }
