--- a/src/components/DashboardForms/Form.module.css
+++ b/src/components/DashboardForms/Form.module.css
@@ -16,7 +16,7 @@ input{
 
 }
 .modalContainer {
-  width: 80vh;
+  width: 100vh;
   max-height: fit-content;
   border-radius: 12px;
   background-color: white;
@@ -25,6 +25,22 @@ input{
   flex-direction: column;
   margin: 5px;
   padding: 5px;
+}
+
+.label-txt{
+  white-space: nowrap;
+}
+
+.success-message {
+  background-color: #4CAF50; 
+  color: white;
+  padding: 10px 20px;
+  position: fixed; 
+  top: 20px; 
+  right: 20px; 
+  border-radius: 5px; 
+  opacity: 0; 
+  transition: opacity 0.3s ease-in-out; 
 }
 
 .modalContainer .title {
