--- a/src/components/Logout/Logout.module.css
+++ b/src/components/Logout/Logout.module.css
@@ -4,3 +4,18 @@
   display: flex;
   align-content: center;
 }
+
+.l-button{
+  border-radius: 5px;
+  align-items: center;
+  position: absolute;
+  color: white;
+  background-color: #8761ac;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  font-size: 16px;
+
+}
